--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -4,15 +4,18 @@ snapper-configs.xml
 snapper-zypp-plugin.xml
 snapper-zypp-plugin.conf.xml
 pam_snapper.xml
+mksubvolume.xml
 snapper.8
 snapperd.8
 snapper-configs.5
 snapper-zypp-plugin.8
 snapper-zypp-plugin.conf.5
 pam_snapper.8
+mksubvolume.8
 snapper.html
 snapperd.html
 snapper-configs.html
 snapper-zypp-plugin.html
 snapper-zypp-plugin.conf.html
 pam_snapper.html
+mksubvolume.html
