- added conditional compilation of installation-helper (gh#openSUSE/snapper#202)

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -18,6 +18,30 @@ snapper_SOURCES =			\
 
 snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
 
+libexecdir = /usr/lib/snapper
+
+libexec_PROGRAMS = systemd-helper
+
+systemd_helper_SOURCES =		\
+	systemd-helper.cc		\
+	types.cc	types.h		\
+	commands.cc	commands.h	\
+	cleanup.cc	cleanup.h	\
+	misc.cc		misc.h		\
+	errors.cc	errors.h
+
+systemd_helper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
+
+if ENABLE_BTRFS
+
+libexec_PROGRAMS += installation-helper
+
+installation_helper_SOURCES =		\
+	installation-helper.cc		\
+	misc.cc		misc.h
+
+installation_helper_LDADD = ../snapper/libsnapper.la utils/libutils.la
+
 if ENABLE_ROLLBACK
 
 sbin_PROGRAMS = mksubvolume
@@ -29,23 +53,5 @@ mksubvolume_LDADD = ../snapper/libsnapper.la utils/libutils.la
 
 endif
 
-libexecdir = /usr/lib/snapper
-
-libexec_PROGRAMS = installation-helper systemd-helper
-
-installation_helper_SOURCES =		\
-	installation-helper.cc		\
-	misc.cc		misc.h
-
-installation_helper_LDADD = ../snapper/libsnapper.la utils/libutils.la
-
-systemd_helper_SOURCES =		\
-	systemd-helper.cc		\
-	types.cc	types.h		\
-	commands.cc	commands.h	\
-	cleanup.cc	cleanup.h	\
-	misc.cc		misc.h		\
-	errors.cc	errors.h
-
-systemd_helper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
+endif
 
