Detect and use proper libexecdir
Snapper normally hard-codes the systemd helper's path
to /usr/lib/snapper, but it should be defined by
automake for libexecdir

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -18,7 +18,7 @@ snapper_SOURCES =			\
 
 snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
 
-libexecdir = /usr/lib/snapper
+libexecdir = @libexecdir@/snapper
 
 libexec_PROGRAMS = systemd-helper
 
