--- a/data/timeline.service.in
+++ b/data/timeline.service.in
@@ -5,5 +5,5 @@ Documentation=man:snapper(8) man:snapper-configs(5)
 
 [Service]
 Type=simple
-ExecStart=/usr/lib/snapper/systemd-helper --timeline
+ExecStart=@libexecdir@/snapper/systemd-helper --timeline
 
