--- a/Makefile.ci
+++ b/Makefile.ci
@@ -8,13 +8,19 @@
 # Usage in Jenkins:
 # make -f Makefile.ci osc_build
 
-.PHONY: package osc_build
-
-package:
-	./obs-package-from-git \
+.PHONY: package
+package: obs-package-from-git
+	./$^ \
 		-P YaST:Head -p snapper \
 		-o .obsdir \
 		-c 'make -f Makefile.repo && make package'
 
+.PHONY: osc_build
 osc_build: package
 	cd .obsdir; osc build
+
+# A script that is shared with other projects and should be always refreshed
+URL=https://raw.githubusercontent.com/openSUSE/obs-package-from-git/master/obs-package-from-git
+.PHONY: always_out_of_date
+obs-package-from-git: always_out_of_date
+	wget -O $@ $(URL) && chmod +x $@
