Use a Rakefile for packaging tasks.
Yes, Rake (and Ruby) is foreign to C++ development.
I think it is justified to introduce it for the specific task of
submitting to the openSUSE Build Service, something a C++ contributor
does not need but our team does.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Makefile.in
 Makefile
 .deps
 .libs
+/.obsdir/
 aclocal.m4
 autom4te.cache
 config.*
@@ -11,6 +12,7 @@ install-sh
 libtool
 ltmain.sh
 missing
+/obs-package-from-git
 stamp-h1
 py-compile
 test-driver
