Search for boost during configuration phase
The autoconf macros were extracted from the autoconf-archive 2015.09.25
([1]).

[1] http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2015.09.25.tar.xz

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS = snapper examples dbus server client scripts pam data doc po		\
 	testsuite testsuite-real testsuite-cmp
 
 AUTOMAKE_OPTIONS = foreign dist-bzip2 no-dist-gzip
+ACLOCAL_AMFLAGS = -Im4
 
 doc_DATA = AUTHORS COPYING
 
