--- a/testsuite-cmp/Makefile.am
+++ b/testsuite-cmp/Makefile.am
@@ -11,6 +11,7 @@ noinst_SCRIPTS = run-all
 noinst_PROGRAMS = cmp
 
 cmp_SOURCES = cmp.cc
+cmp_LDADD = $(LDADD) -lboost_system
 
 EXTRA_DIST = $(noinst_SCRIPTS)
 
