- updated e-mail address

--- a/doc/snapperd.xml.in
+++ b/doc/snapperd.xml.in
@@ -36,7 +36,7 @@
 
   <refsect1 id='authors'>
     <title>AUTHORS</title>
-    <para>Arvin Schnell <email>aschnell@suse.de</email></para>
+    <para>Arvin Schnell <email>aschnell@suse.com</email></para>
   </refsect1>
 
   <refsect1 id='see_also'>
