properly add selinux-readme file to distribution pkg

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -27,11 +27,8 @@ html: $(man_MANS:%.5=%.html) $(man_MANS:%.8=%.html)
 .xml.html: .xml
 	$(XSLTPROC) --nonet html.xsl $< > $@
 
-EXTRA_DIST = dbus-protocol.txt manpages.xsl html.xsl
+EXTRA_DIST = dbus-protocol.txt manpages.xsl html.xsl selinux-readme.txt
 
-if ENABLE_SELINUX
-EXTRA_DIST += selinux-readme.txt
-endif
 
 clean-local:
 	rm -f *.{5,8} *.html
