--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -163,7 +163,7 @@
 
       <para>Some files keep state information of the system,
       e.g. <filename>/etc/mtab</filename>. Such files should never be
-      reverted. To help users, snapper allows to ignore these files.</para>
+      reverted. To help users, snapper allows one to ignore these files.</para>
 
       <para>Each line in all
       files <filename>/etc/snapper/filters/*.txt</filename> specifies a
