Type=oneshot is better than Type=simple
see https://www.freedesktop.org/software/systemd/man/systemd.service.html#Type=
"Behavior of oneshot is similar to simple; however, it is expected that
 the process has to exit before systemd starts follow-up units."

boot service is expected to be executed once, and would not affects other
services.

--- a/data/boot.service
+++ b/data/boot.service
@@ -2,5 +2,5 @@
 Description=Take snapper snapshot of root on boot
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=/usr/bin/snapper --config root create --cleanup-algorithm number --description "boot"
