Add bash completion
Taken from my Debian package. Not perfect, but not bad for stating point.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -19,6 +19,7 @@ EXTRA_DIST = snapper-hourly snapper-daily zypp-plugin.py $(pam_snapper_SCRIPTS)
 install-data-local:
 	install -D snapper-hourly $(DESTDIR)/etc/cron.hourly/suse.de-snapper
 	install -D snapper-daily $(DESTDIR)/etc/cron.daily/suse.de-snapper
+	install -D bash-completion.sh $(DESTDIR)/usr/share/bash-completion/completions/snapper
 
 if HAVE_ZYPP
 	install -D zypp-plugin.py $(DESTDIR)/usr/lib/zypp/plugins/commit/snapper.py
