--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -222,7 +222,7 @@
       <varlistentry>
 	<term><option>--no-dbus</option></term>
 	<listitem>
-	  <para>Operate without a DBus connection. Only works for some commands.</para>
+	  <para>Operate without a DBus connection.</para>
 	  <para>Use with caution since a running snapperd will not know about
 	  modifications made to the system.</para>
 	</listitem>
