support option --no-dbus for all snapper commands (#299)
- make all snapper commands available with option --no-dbus by using new proxy classes

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -13,6 +13,9 @@ snapper_SOURCES =			\
 	types.cc	types.h		\
 	commands.cc	commands.h	\
 	cleanup.cc	cleanup.h	\
+	proxy.cc	proxy.h		\
+	proxy-dbus.cc	proxy-dbus.h	\
+	proxy-lib.cc	proxy-lib.h	\
 	misc.cc		misc.h		\
 	errors.cc	errors.h
 
@@ -27,6 +30,9 @@ systemd_helper_SOURCES =		\
 	types.cc	types.h		\
 	commands.cc	commands.h	\
 	cleanup.cc	cleanup.h	\
+	proxy.cc	proxy.h		\
+	proxy-dbus.cc	proxy-dbus.h	\
+	proxy-lib.cc	proxy-lib.h	\
 	misc.cc		misc.h		\
 	errors.cc	errors.h
 
