update zypp-plugin.conf with zypper cmdline opts

--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -15,5 +15,13 @@
     <solvable match="w" important="true">udev</solvable>
     <solvable match="w">*</solvable>
   </solvables>
+  
+  <!--  Set enabled to "true" in order to save zypper commandline arguments in snapshot descriptions.
+        By default output the arguments (not including zypp(zypper) ) is truncated to 32 chars. Set to 0 for unlimited output. -->
+  
+  <description>
+	  <zypper-extended-description enabled="false">32</zypper-extended-description>
+  </description>
+
 
 </snapper-zypp-plugin-conf>
