--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -344,6 +344,12 @@
 		<para>List snapshots from all configs accessible by the user.</para>
 	      </listitem>
 	    </varlistentry>
+	    <varlistentry>
+			<term><option>-f, --full</option></term>
+			<listitem>
+				<para>Display full description even if it may wrap.</para>
+			</listitem>
+	    </varlistentry>
 	  </variablelist>
 	</listitem>
       </varlistentry>
