fix wording in zypper-extended-description comment

--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -17,7 +17,7 @@
   </solvables>
   
   <!--  Set enabled to "true" in order to save zypper commandline arguments in snapshot descriptions.
-        By default output the arguments (not including zypp(zypper) ) is truncated to 32 chars. Set to 0 for unlimited output. -->
+        by default argoments following zypp(zypper) are truncated at 32 chars. change to 0 for unlimited output -->
   
   <description>
 	  <zypper-extended-description enabled="false">32</zypper-extended-description>
